Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <div class="container">
       <section id="main_content">
         <h2>
-<a id="-welcome-to-github-pages" class="anchor" href="#-welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="http://imgur.com/k6m1oTR" alt="">### Welcome to GitHub Pages.</h2>
+<a id="" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="http://imgur.com/k6m1oTR" alt="">
+</h2>
 
 <h1>
 <a id="how-did-we-do-all-this" class="anchor" href="#how-did-we-do-all-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>How did we do all this???</h1>
@@ -38,6 +39,13 @@
 So, at this point, the data points have been divided into eight groups: a positive and negative group for each of the four banks. However, not every post from the original data set is a part of one of these groups. Any post that does not mention any of the banks or has a middling sentiment was removed. Also, if a post mentioned two or more of the banks, it was placed in multiple groups.
 Now, to determine the subject matters of the posts, we looked at each group as a large body of text. Within each of these bodies, we found the most frequently used words. This gave us some overall topics to look at for each group, instead of classifying each post individually.
 Below is an outline of our thought process when approaching this project.</p>
+
+<h1>
+<a id="overall-topics" class="anchor" href="#overall-topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overall Topics</h1>
+
+<p>What were these overall topics though? We found that almost every bank is either succeeding or failing in customer service, ATM's, fraud/ security, or technology/machines. We can prove this based on the data and its relationship to the original posts. By making a word cloud of both the positive and negative words in each post, we can see which words are used more. For example, the word cloud below is of bank b. </p>
+
+<p><a href="http://imgur.com/share/i/YTHUTFh">http://imgur.com/share/i/YTHUTFh</a></p>
       </section>
     </div>
 
