--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h2>
-<a id="" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a><img src="http://imgur.com/k6m1oTR" alt="">
-</h2>
-
-<h1>
+        <h1>
 <a id="how-did-we-do-all-this" class="anchor" href="#how-did-we-do-all-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>How did we do all this???</h1>
 
 <p>220,377 posts, and two weeks to figure them all out. These are very intimidating numbers for a team of freshman with zero experience in the data science world. How does one even start something like this? The first step was to outline potential approaches. After several scrapped ideas, the final was to focus on each bank individually. To do this, we found data points containing “banka”, “bankb”, “bankc”, and “bankd”, and categorized them accordingly. Our next step was divide each bank’s posts based on their sentiment, ie. the post’s attitude, positive or negative. To find the sentiments of each data point, we used a list of positive words and a list a negative words. We compared the words in each data point to the words of the lists, and a score was recorded for each post. If a post contained a positive word, its score went up by one, and if a post contained a negative word, its score went down by one. Posts with scores above two were marked as positive, and posts with scores below negative two were marked as negative. 
@@ -40,12 +36,14 @@ So, at this point, the data points have been divided into eight groups: a positi
 Now, to determine the subject matters of the posts, we looked at each group as a large body of text. Within each of these bodies, we found the most frequently used words. This gave us some overall topics to look at for each group, instead of classifying each post individually.
 Below is an outline of our thought process when approaching this project.</p>
 
+<p>(<a href="http://imgur.com/k6m1oTR">http://imgur.com/k6m1oTR</a>)</p>
+
 <h1>
 <a id="overall-topics" class="anchor" href="#overall-topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overall Topics</h1>
 
 <p>What were these overall topics though? We found that almost every bank is either succeeding or failing in customer service, ATM's, fraud/ security, or technology/machines. We can prove this based on the data and its relationship to the original posts. By making a word cloud of both the positive and negative words in each post, we can see which words are used more. For example, the word cloud below is of bank b. </p>
 
-<p><a href="http://imgur.com/share/i/YTHUTFh">http://imgur.com/share/i/YTHUTFh</a></p>
+<p>(<a href="http://imgur.com/share/i/YTHUTFh">http://imgur.com/share/i/YTHUTFh</a>)</p>
       </section>
     </div>
 
