--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ Below is an outline of our thought process when approaching this project.</p>
 <p>What were these overall topics though? We found that almost every bank is either succeeding or failing in customer service, ATM's, fraud/ security, or technology/machines. We can prove this based on the data and its relationship to the original posts. By making a word cloud of both the positive and negative words in each post, we can see which words are used more. For example, the word cloud below is of bank b. </p>
 
 <p>(<a href="http://imgur.com/share/i/YTHUTFh">http://imgur.com/share/i/YTHUTFh</a>)</p>
+
+<p>This word cloud makes it clear that these are positive words and that customer service is very good in bank b. Below is a negative word cloud for bank b. Words like money, and fraud are </p>
+
+<p>(<a href="http://imgur.com/share/i/zAB8idR">http://imgur.com/share/i/zAB8idR</a>)</p>
       </section>
     </div>
 
