--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Wells Fargo Analytics Competition by langensteinem</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/langensteinem/wells-fargo-analytics-competition">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/langensteinem/wells-fargo-analytics-competition/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/langensteinem/wells-fargo-analytics-competition/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <header>
-      <div class="container">
-        <h1>Wells Fargo Analytics Competition</h1>
-        <h2></h2>
+    <div class="wrapper">
 
-        <section id="downloads">
-          <a href="https://github.com/langensteinem/wells-fargo-analytics-competition/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/langensteinem/wells-fargo-analytics-competition/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/langensteinem/wells-fargo-analytics-competition" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+      <section>
+        <div id="title">
+          <h1>Wells Fargo Analytics Competition</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/langensteinem">langensteinem</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-    <div class="container">
-      <section id="main_content">
         <h1>
 <a id="how-did-we-do-all-this" class="anchor" href="#how-did-we-do-all-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>How did we do all this???</h1>
 
@@ -393,8 +403,9 @@ wordcloud( names( bankD.neg.freq ), bankD.neg.freq , min.freq = 100 )</p>
 Technology/Machines: 
 The majority of problems with machines are that they are not meant to go 24-7. A lot of the original technology created for normal transactions, but now there is online banking, shopping, and atms 24-7. This constantly over rides the majority of the IT systems and causes systems to shut down. The only real way to permanently fix this problem is to have a system for each part of the bank. One for Atms, one for online banking, one for online transactions (shopping), and one for regular bank transactions. Although this will be a pain and very costly to start from scratch, it is the only way to better the service in the long run.  </p>
       </section>
-    </div>
 
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
