--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@ So, at this point, the data points have been divided into eight groups: a positi
 Now, to determine the subject matters of the posts, we looked at each group as a large body of text. Within each of these bodies, we found the most frequently used words. This gave us some overall topics to look at for each group, instead of classifying each post individually.
 Below is an outline of our thought process when approaching this project.</p>
 
-<p>(<a href="http://imgur.com/k6m1oTR">http://imgur.com/k6m1oTR</a>)</p>
+<p><img src="http://imgur.com/k6m1oTR" alt=""></p>
 
 <h1>
 <a id="overall-topics" class="anchor" href="#overall-topics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overall Topics</h1>
 
 <p>What were these overall topics though? We found that almost every bank is either succeeding or failing in customer service, ATM's, fraud/ security, or technology/machines. We can prove this based on the data and its relationship to the original posts. By making a word cloud of both the positive and negative words in each post, we can see which words are used more. For example, the word cloud below is of bank b. </p>
 
-<p>(<a href="http://imgur.com/share/i/YTHUTFh">http://imgur.com/share/i/YTHUTFh</a>)</p>
+<p><img src="http://i.imgur.com/YTHUTFh.jpg" alt=""></p>
 
 <p>This word cloud makes it clear that these are positive words and that customer service is very good in bank b. Below is a negative word cloud for bank b. Words like money, and fraud are </p>
 
-<p>(<a href="http://imgur.com/share/i/zAB8idR">http://imgur.com/share/i/zAB8idR</a>)</p>
+<p><img src="http://i.imgur.com/zAB8idR.jpg" alt=""></p>
 
 <h1>
 <a id="r-code" class="anchor" href="#r-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>R Code</h1>
